Java compilation