@@ -7,17 +7,12 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.BitSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.TreeMap;
+import java.util.logging.LogManager;
 import java.util.logging.Logger;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -54,18 +49,17 @@ import velka.core.interpretation.Environment;
 import velka.core.interpretation.TopLevelEnvironment;
 import velka.core.langbase.ConstructorOperators;
 import velka.core.langbase.ConversionOperators;
-import velka.core.langbase.JavaArrayList;
-import velka.core.langbase.JavaBitSet;
 import velka.core.langbase.JavaLinkedList;
 import velka.core.langbase.ListNative;
 import velka.core.langbase.Operators;
 import velka.core.literal.LitBoolean;
 import velka.core.literal.LitComposite;
 import velka.core.literal.LitDouble;
-import velka.core.literal.LitEnum;
 import velka.core.literal.LitInteger;
 import velka.core.literal.LitInteropObject;
 import velka.core.literal.LitString;
+import velka.java.runtime.TypedObject;
+import velka.java.runtime.VelkaTuple;
 import velka.types.RepresentationOr;
 import velka.types.Substitution;
 import velka.types.SubstitutionsCannotBeMergedException;
@@ -74,12 +68,11 @@ import velka.types.TypeArrow;
 import velka.types.TypeAtom;
 import velka.types.TypeName;
 import velka.types.TypeRepresentation;
-import velka.types.TypeSetDoesNotUnifyException;
 import velka.types.TypeTuple;
 import velka.types.TypeVariable;
 import velka.types.TypesDoesNotUnifyException;
 import velka.util.AppendableException;
-import velka.util.CostAggregation;
+import velka.util.RankAggregation;
 import velka.util.NameGenerator;
 import velka.util.Pair;
 
@@ -106,6 +99,8 @@ class TestInterpretation extends VelkaTest{
 
 		Pair<Type, Substitution> p = litString.infer(env);
 		this.assertInference(p, TypeAtom.TypeStringNative, litString, true);
+		
+		this.assertJExprEquals("foo", (new LitString("foo")));
 	}
 
 	@Test
@@ -129,6 +124,8 @@ class TestInterpretation extends VelkaTest{
 
 		Pair<Type, Substitution> p = litInteger.infer(env);
 		this.assertInference(p, TypeAtom.TypeIntNative, litInteger, true);
+		
+		this.assertJExprEquals(Integer.valueOf(42), (new LitInteger(42)));
 	}
 
 	@Test
@@ -152,6 +149,8 @@ class TestInterpretation extends VelkaTest{
 
 		Pair<Type, Substitution> p = litDouble.infer(env);
 		this.assertInference(p, TypeAtom.TypeDoubleNative, litDouble, true);
+		
+		this.assertJExprEquals(Double.valueOf(42.0d), (new LitDouble(42d)));
 	}
 
 	@Test
@@ -174,36 +173,9 @@ class TestInterpretation extends VelkaTest{
 
 		Pair<Type, Substitution> p = LitBoolean.TRUE.infer(env);
 		this.assertInference(p, TypeAtom.TypeBoolNative, LitBoolean.TRUE, true);
-	}
-
-	@Test
-	@DisplayName("Test Enum Literal")
-	void testLitEnum() throws AppendableException {
-		TypeName typeName = new TypeName("TestEnum");
-		TypeAtom type = new TypeAtom(typeName, TypeRepresentation.NATIVE);
-
-		LitEnum enumValue1 = new LitEnum("value1", type);
-		LitEnum enumValue2 = new LitEnum("value2", type);
-		LitEnum differentEnumValue = new LitEnum("value1", TypeAtom.TypeInt);
-
-		this.assertReflexivity(enumValue1);
-		this.assertDifference(enumValue1, enumValue2);
-		this.assertDifference(enumValue1, differentEnumValue);
-		this.assertDifference(enumValue1, Expression.EMPTY_EXPRESSION);
-
-		Environment env = TopLevelEnvironment.instantiate();
 		
-
-		this.assertInterpretationEquals(enumValue1, enumValue1, env);
-
-		Pair<Type, Substitution> p = enumValue1.infer(env);
-		this.assertInference(p, type, enumValue1, true);
-
-		assertAll(() -> {
-			enumValue1.toString();
-			// Not implemented yet
-			// enumValue1.toClojureCode(env);
-		});
+		this.assertJExprEquals(Boolean.TRUE, LitBoolean.TRUE);
+		this.assertJExprEquals(Boolean.FALSE, LitBoolean.FALSE);
 	}
 
 	@Test
@@ -236,6 +208,40 @@ class TestInterpretation extends VelkaTest{
 			composite1.toString();
 			composite1.toClojureCode(env);
 		});
+		
+		this.assertJExprEquals(new TypedObject(Integer.valueOf(42), type), (new LitComposite(new LitInteger(42), type)));
+		
+//		this.assertJExprsEquals(new TypedObject("42", TypeAtom.TypeIntString), 
+//				List.of(ConstructorOperators.IntStringConstructor,
+//						JavaTypeSystem.codeInstance().invoke("construct")
+//							.arg(TypeUtil.instance().type2java(TypeAtom.TypeIntString))
+//							.arg(TypeUtil.instance().type2java(new TypeTuple(TypeAtom.TypeStringNative)))
+//							.arg((new Tuple(new LitString("42"))))
+//							.arg(JExpr._null())));
+		
+		this.assertJExprsEquals(new TypedObject("42", TypeAtom.TypeIntString), 
+				List.of(
+						(new Construct(TypeAtom.TypeIntString, new Tuple(new LitString("42"))))));
+		
+		this.assertJExprsEquals(Integer.valueOf(42), 
+				List.of(
+						(new Construct(TypeAtom.TypeIntNative, new Tuple(new LitInteger(42))))));
+		
+		this.assertJExprsEquals(new TypedObject("XLII", TypeAtom.TypeIntRoman), 
+				List.of(
+						(new Construct(TypeAtom.TypeIntRoman, new Tuple(new LitString("XLII"))))));
+		
+		this.assertJExprsEquals("foo", 
+				List.of(
+						(new Construct(TypeAtom.TypeStringNative, new Tuple(new LitString("foo"))))));
+		
+		this.assertJExprsEquals(Double.valueOf(42), 
+				List.of(
+						(new Construct(TypeAtom.TypeDoubleNative, new Tuple(new LitDouble(42.0))))));
+		
+		this.assertJExprsEquals(Boolean.TRUE, 
+				List.of(
+						(new Construct(TypeAtom.TypeBoolNative, new Tuple(LitBoolean.TRUE)))));
 	}
 
 	@Test
@@ -280,7 +286,6 @@ class TestInterpretation extends VelkaTest{
 	public void testVariable() throws AppendableException {
 		Symbol variable = new Symbol("x");
 		Environment env = TopLevelEnvironment.instantiate();
-		
 
 		assertAll(() -> {
 			variable.toString();
@@ -344,6 +349,9 @@ class TestInterpretation extends VelkaTest{
 		assertAll(() -> {
 			Expression.EMPTY_EXPRESSION.toClojureCode(env);
 		});
+		
+		this.assertJExprEquals(TypedObject.VELKA_EMPTY, 
+				Expression.EMPTY_EXPRESSION);
 	}
 
 	@Test
@@ -424,6 +432,10 @@ class TestInterpretation extends VelkaTest{
 				.stream()
 				.filter(x -> !x.equals(Expression.EMPTY_EXPRESSION))
 				.collect(Tuple.toTuple));
+		
+		this.assertJExprEquals(new VelkaTuple(List.of(Integer.valueOf(42), Boolean.TRUE, "foo"), 
+												new TypeTuple(TypeAtom.TypeIntNative, TypeAtom.TypeBoolNative, TypeAtom.TypeStringNative)), 
+				(new Tuple(new LitInteger(42), LitBoolean.TRUE, new LitString("foo"))));
 	}
 
 	@Test
@@ -433,7 +445,7 @@ class TestInterpretation extends VelkaTest{
 		Environment env = TopLevelEnvironment.instantiate();
 		
 
-		assertThrows(UserException.class, () -> exception.interpret(env));
+		assertThrows(RuntimeException.class, () -> exception.interpret(env));
 
 		assertAll(() -> {
 			exception.toClojureCode(env);
@@ -536,8 +548,9 @@ class TestInterpretation extends VelkaTest{
 	@Test
 	@DisplayName("Test Lambda")
 	void testLambda() throws AppendableException {
-		final Lambda lambda = new Lambda(new Tuple(Arrays.asList(new Symbol("x"), new Symbol("y"))),
-				new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative, TypeAtom.TypeIntNative)), new Symbol("x"));
+		final Lambda lambda = new Lambda(
+				new Symbol("x"),
+				List.of(Pair.of(new Symbol("x"), TypeAtom.TypeIntNative), Pair.of(new Symbol("y"), TypeAtom.TypeIntNative)));
 		Environment top = TopLevelEnvironment.instantiate();
 		
 
@@ -548,14 +561,16 @@ class TestInterpretation extends VelkaTest{
 		});
 
 		this.assertReflexivity(lambda);
-		this.assertDifference(lambda, new Lambda(new Tuple(Arrays.asList(new Symbol("z"), new Symbol("y"))),
-				new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative, TypeAtom.TypeIntNative)), new Symbol("x")));
-		this.assertDifference(lambda, new Lambda(new Tuple(Arrays.asList(new Symbol("x"), new Symbol("y"))),
-				new TypeTuple(Arrays.asList(TypeAtom.TypeDoubleNative, TypeAtom.TypeIntNative)), new Symbol("x")));
+		this.assertDifference(lambda, 
+				new Lambda(new Symbol("x"),
+				List.of(Pair.of(new Symbol("z"), TypeAtom.TypeIntNative), 
+						Pair.of(new Symbol("y"), TypeAtom.TypeIntNative))));
+		this.assertDifference(lambda, new Lambda(new Symbol("x"),
+				List.of(Pair.of(new Symbol("x"), TypeAtom.TypeDoubleNative), Pair.of(new Symbol("y"), TypeAtom.TypeIntNative))));
 		this.assertDifference(lambda,
-				new Lambda(new Tuple(Arrays.asList(new Symbol("x"), new Symbol("y"))),
-						new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative, TypeAtom.TypeIntNative)),
-						Expression.EMPTY_EXPRESSION));
+				new Lambda(Expression.EMPTY_EXPRESSION,
+						List.of(Pair.of(new Symbol("x"), TypeAtom.TypeIntNative), 
+								Pair.of(new Symbol("y"), TypeAtom.TypeIntNative))));
 		this.assertDifference(lambda, Expression.EMPTY_EXPRESSION);
 
 		Expression e = lambda.interpret(top);
@@ -567,6 +582,19 @@ class TestInterpretation extends VelkaTest{
 		assertThrows(TypesDoesNotUnifyException.class,
 				() -> this.parseString("(lambda ((String x)) (+ x x))")
 						.get(0).infer(top));
+		
+		this.assertJExprEquals(Integer.valueOf(42), new AbstractionApplication(
+				(new Lambda(new LitInteger(42), List.of())), Tuple.EMPTY_TUPLE));
+		
+		this.assertJExprEquals(Integer.valueOf(42), new AbstractionApplication(
+				(new Lambda(new Symbol("a"),
+						List.of(Pair.of(new Symbol("a"), TypeAtom.TypeIntNative)))),
+				new Tuple(new LitInteger(42))));
+
+		this.assertJExprEquals(Integer.valueOf(42), new AbstractionApplication(
+				(new Lambda(new Symbol("a"),
+						List.of(Pair.of(new Symbol("a"), TypeAtom.TypeIntNative)))),
+				new Tuple(new LitComposite(new LitString("XLII"), TypeAtom.TypeIntRoman))));
 	}
 
 	@Test
@@ -578,8 +606,8 @@ class TestInterpretation extends VelkaTest{
 		Environment bound = Environment.create(top);
 		bound.put(new Symbol("bound"), new LitDouble(3.141521));
 
-		final Function function = new Function(new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)),
-				new Tuple(Arrays.asList(new Symbol("x"))), new Symbol("bound"), bound);
+		final Function function = new Function(bound, new Symbol("bound"),
+				List.of(Pair.of(new Symbol("x"), TypeAtom.TypeIntNative)));
 
 		assertAll(() -> {
 			function.toString();
@@ -588,14 +616,20 @@ class TestInterpretation extends VelkaTest{
 
 		this.assertReflexivity(function);
 		this.assertDifference(function,
-				new Function(new TypeTuple(Arrays.asList(TypeAtom.TypeDoubleNative)),
-						new Tuple(Arrays.asList(new Symbol("x"))), new Symbol("bound"), bound));
-		this.assertDifference(function, new Function(new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)),
-				new Tuple(Arrays.asList(new Symbol("y"))), new Symbol("bound"), bound));
-		this.assertDifference(function, new Function(new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)),
-				new Tuple(Arrays.asList(new Symbol("x"))), Expression.EMPTY_EXPRESSION, bound));
-		this.assertDifference(function, new Function(new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)),
-				new Tuple(Arrays.asList(new Symbol("x"))), new Symbol("bound"), top));
+				new Function(bound,
+						new Symbol("bound"),
+						List.of(Pair.of(new Symbol("x"), TypeAtom.TypeDoubleNative))));
+		this.assertDifference(function, 
+				new Function(bound,
+						new Symbol("bound"),
+						List.of(Pair.of(new Symbol("y"), TypeAtom.TypeIntNative))));
+		this.assertDifference(function, 
+				new Function(bound, Expression.EMPTY_EXPRESSION,
+				List.of(Pair.of(new Symbol("x"), TypeAtom.TypeIntNative))));
+		this.assertDifference(function, 
+				new Function(top,
+						new Symbol("bound"),
+						List.of(Pair.of(new Symbol("x"), TypeAtom.TypeIntNative))));
 		this.assertDifference(function, Expression.EMPTY_EXPRESSION);
 
 		this.assertInterpretationEquals(function, function, top);
@@ -603,10 +637,7 @@ class TestInterpretation extends VelkaTest{
 		Pair<Type, Substitution> p = function.infer(top);
 		this.assertInferenceClass(p, TypeArrow.class, function);
 
-		assertThrows(AppendableException.class,
-				() -> (new Function(new TypeTuple(Arrays.asList(new TypeVariable("x"))),
-						new Tuple(Arrays.asList(Expression.EMPTY_EXPRESSION)), new Symbol("y"), top)).infer(top));
-		assertThrows(TypesDoesNotUnifyException.class, () -> this
+		assertThrows(RuntimeException.class, () -> this
 				.parseString("(lambda ((String x)) (+ x x))")
 					.get(0).interpret(top).infer(top));
 	}
@@ -614,45 +645,14 @@ class TestInterpretation extends VelkaTest{
 	@Test
 	@DisplayName("Test Extended Lambda")
 	void testExpendedLambda() throws AppendableException {
-		ExtendedLambda lambda = ExtendedLambda.makeExtendedLambda(Arrays.asList(
-				new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-						new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)), new Symbol("x")),
-				new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-						new TypeTuple(Arrays.asList(TypeAtom.TypeIntRoman)),
-						new AbstractionApplication(ConversionOperators.IntRomanToIntNative,
-								new Tuple(Arrays.asList(new Symbol("x"))))),
-				new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-						new TypeTuple(Arrays.asList(TypeAtom.TypeIntString)), new AbstractionApplication(
-								ConversionOperators.IntStringToIntNative, new Tuple(Arrays.asList(new Symbol("x")))))));
+		var lambda = new ExtendedLambda(new TypeTuple(TypeAtom.TypeInt));
 
 		this.assertReflexivity(lambda);
 		this.assertDifference(lambda,
-				ExtendedLambda.makeExtendedLambda(Arrays.asList(
-						new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-								new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)), new Symbol("x")),
-						new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-								new TypeTuple(Arrays.asList(TypeAtom.TypeIntRoman)), new AbstractionApplication(
-										ConversionOperators.IntRomanToIntNative, new Tuple(Arrays.asList(new Symbol("x"))))))));
-		this.assertDifference(lambda,
-				ExtendedLambda.makeExtendedLambda(Arrays.asList(
-						new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-								new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)), new Symbol("x")),
-						new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-								new TypeTuple(Arrays.asList(TypeAtom.TypeIntRoman)),
-								new AbstractionApplication(ConversionOperators.IntRomanToIntNative,
-										new Tuple(Arrays.asList(new Symbol("x"))))),
-						new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-								new TypeTuple(Arrays.asList(TypeAtom.TypeIntString)),
-								new AbstractionApplication(ConversionOperators.IntStringToIntNative,
-										new Tuple(Arrays.asList(new Symbol("x"))))),
-						new Lambda(new Tuple(Arrays.asList(new Symbol("y"))),
-								new TypeTuple(Arrays.asList(TypeAtom.TypeIntString)), new AbstractionApplication(
-										ConversionOperators.IntStringToIntNative, new Tuple(Arrays.asList(new Symbol("x"))))))));
-		this.assertDifference(lambda, Expression.EMPTY_EXPRESSION);
+				new ExtendedLambda(new TypeTuple()));
 
 		Environment top = TopLevelEnvironment.instantiate();
 		
-
 		assertAll(() -> {
 			lambda.toString();
 			lambda.hashCode();
@@ -663,18 +663,8 @@ class TestInterpretation extends VelkaTest{
 		Pair<Type, Substitution> p = lambda.infer(top);
 
 		this.assertInference(p,
-				RepresentationOr.makeRepresentationOr(Arrays.asList(
-						new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)), TypeAtom.TypeIntNative),
-						new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntString)), TypeAtom.TypeIntNative),
-						new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntRoman)), TypeAtom.TypeIntNative))),
+				new TypeArrow(new TypeTuple(TypeAtom.TypeInt), new TypeVariable(NameGenerator.next())),
 				lambda);
-
-		assertThrows(AppendableException.class,
-				() -> (ExtendedLambda.makeExtendedLambda(Arrays.asList(
-						new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-								new TypeTuple(Arrays.asList(TypeAtom.TypeStringNative)), new Symbol("x")),
-						new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-								new TypeTuple(Arrays.asList(TypeAtom.TypeBoolNative)), new Symbol("x"))))).infer(top));
 	}
 
 	@Test
@@ -685,27 +675,25 @@ class TestInterpretation extends VelkaTest{
 
 		Environment bound = Environment.create(top);
 		bound.put(new Symbol("x"), new LitInteger(42));
-		List<Function> implementations = Arrays.asList(
-				new Function(new TypeTuple(Arrays.asList(TypeAtom.TypeIntRoman)),
-						new Tuple(Arrays.asList(new Symbol("y"))), new Symbol("y"), bound),
-				new Function(new TypeTuple(Arrays.asList(TypeAtom.TypeIntString)),
-						new Tuple(Arrays.asList(new Symbol("y"))), new Symbol("y"), bound));
-
-		ExtendedFunction function = Extend.makeExtendedFunction(implementations, bound);
+		
+		var function = new ExtendedFunction(bound);
+		var function2 = function.extend(
+				new Function(bound, new Symbol("y"), List.of(Pair.of(new Symbol("y"), TypeAtom.TypeIntRoman))),
+				new Function(bound, new LitDouble(RankAggregation.instance().defaultImplementationRank()),
+						List.of(Pair.of(new Symbol("y"), TypeAtom.TypeInt))));
+		
+		var function3 = function2.extend(
+				new Function(bound, new Symbol("y"), List.of(Pair.of(new Symbol("y"), TypeAtom.TypeIntString))),
+				new Function(bound, new LitDouble(RankAggregation.instance().defaultImplementationRank()),
+						List.of(Pair.of(new Symbol("y"), TypeAtom.TypeInt))));
 
 		this.assertReflexivity(function);
+		this.assertReflexivity(function2);
+		this.assertReflexivity(function3);
 
-		List<Function> tmpImpls = new LinkedList<Function>(implementations);
-		tmpImpls.remove(0);
-		this.assertDifference(function, Extend.makeExtendedFunction(tmpImpls, bound));
-
-		tmpImpls = new LinkedList<Function>(implementations);
-		tmpImpls.add(new Function(new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)),
-				new Tuple(Arrays.asList(new Symbol("y"))), new Symbol("y"), top));
-		this.assertDifference(function, Extend.makeExtendedFunction(tmpImpls, bound));
-
-		this.assertDifference(function, Extend.makeExtendedFunction(implementations, top));
-
+		this.assertDifference(function, function2);
+		this.assertDifference(function, function3);
+		this.assertDifference(function2, function3);
 		this.assertDifference(function, Expression.EMPTY_EXPRESSION);
 
 		assertAll(() -> {
@@ -715,39 +703,48 @@ class TestInterpretation extends VelkaTest{
 
 		Pair<Type, Substitution> p = function.infer(top);
 		this.assertInference(p,
-				RepresentationOr.makeRepresentationOr(Arrays.asList(
-						new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntRoman)), TypeAtom.TypeIntRoman),
-						new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntString)), TypeAtom.TypeIntString))),
+				RepresentationOr.factory(List.of(
+						new TypeArrow(new TypeTuple(TypeAtom.TypeIntRoman), TypeAtom.TypeIntRoman),
+						new TypeArrow(new TypeTuple(TypeAtom.TypeIntString), TypeAtom.TypeIntString))),
 				function);
 
-		assertThrows(AppendableException.class, () -> Extend
-				.makeExtendedFunction(Arrays.asList(
-						new Function(new TypeTuple(Arrays.asList(TypeAtom.TypeStringNative)),
-								new Tuple(Arrays.asList(new Symbol("x"))), new Symbol("x"), top),
-						new Function(new TypeTuple(Arrays.asList(TypeAtom.TypeBoolNative)),
-								new Tuple(Arrays.asList(new Symbol("x"))), new Symbol("x"), top)),
-						bound)
-				.infer(top));
+//		assertThrows(RuntimeException.class, () -> 
+//				function2.extend(
+//						new Function(bound, new LitString("foo"), List.of(Pair.of(new Symbol("Y"), TypeAtom.TypeIntRoman))),
+//						new Function(bound, new LitDouble(RankAggregation.instance().defaultImplementationRank()),
+//								List.of(Pair.of(new Symbol("y"), TypeAtom.TypeInt)))));
+//		
+//		assertThrows(RuntimeException.class, () -> 
+//			function2.extend(
+//				new Function(bound, new Symbol("y"), List.of(Pair.of(new Symbol("y"), TypeAtom.TypeStringNative))),
+//				new Function(bound, new LitDouble(RankAggregation.instance().defaultImplementationRank()),
+//						List.of(Pair.of(new Symbol("y"), TypeAtom.TypeInt)))));
+//		
+//		assertThrows(RuntimeException.class, () -> 
+//			function2.extend(
+//				new Function(bound, new Symbol("y"), List.of(Pair.of(new Symbol("y"), TypeAtom.TypeIntNative))),
+//				new Function(bound, new LitDouble(RankAggregation.instance().defaultImplementationRank()),
+//						List.of(Pair.of(new Symbol("y"), TypeAtom.TypeStringNative)))));
 	}
 
 	@Test
 	@DisplayName("Test Application")
 	void testApplication() throws AppendableException {
 		AbstractionApplication application = new AbstractionApplication(
-				new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-						new TypeTuple(Arrays.asList(new TypeVariable("y"))), new Symbol("x")),
+				new Lambda(new Symbol("x"),
+						List.of(Pair.of(new Symbol("x"), new TypeVariable("y")))),
 				new Tuple(Arrays.asList(new LitInteger(42))));
 
 		this.assertReflexivity(application);
 		this.assertDifference(application,
 				new AbstractionApplication(
-						new Lambda(new Tuple(Arrays.asList(new Symbol("y"))),
-								new TypeTuple(Arrays.asList(new TypeVariable("x"))), new Symbol("x")),
+						new Lambda( new Symbol("x"),
+								List.of(Pair.of(new Symbol("y"), new TypeVariable("x")))),
 						new Tuple(Arrays.asList(new LitInteger(42)))));
 		this.assertDifference(application,
 				new AbstractionApplication(
-						new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-								new TypeTuple(Arrays.asList(new TypeVariable("y"))), new Symbol("x")),
+						new Lambda(new Symbol("x"),
+								List.of(Pair.of(new Symbol("x"), new TypeVariable("y")))),
 						new Tuple(Arrays.asList(new LitInteger(21)))));
 		this.assertDifference(application, Expression.EMPTY_EXPRESSION);
 
@@ -760,11 +757,7 @@ class TestInterpretation extends VelkaTest{
 			application.hashCode();
 		});
 
-		assertThrows(InvalidArgumentsException.class,
-				() -> new AbstractionApplication(new Lambda(new Tuple(Arrays.asList(new Symbol("x"), new Symbol("y"))),
-						new TypeTuple(Arrays.asList(new TypeVariable("_x"), new TypeVariable("y"))), new Symbol("x")),
-						new Tuple(Arrays.asList(new LitInteger(42)))).interpret(top));
-		assertThrows(AppendableException.class,
+		assertThrows(RuntimeException.class,
 				() -> new AbstractionApplication(Expression.EMPTY_EXPRESSION, Tuple.EMPTY_TUPLE).interpret(top));
 
 		this.assertInterpretationEquals(application, new LitInteger(42), top);
@@ -777,9 +770,10 @@ class TestInterpretation extends VelkaTest{
 		Environment evaluation = Environment.create(top);
 		evaluation.put(new Symbol("x"), new LitString("foo"));
 		AbstractionApplication lexicalClojureTest = new AbstractionApplication(
-				new Function(new TypeTuple(Arrays.asList(new TypeVariable("a"))),
-						new Tuple(Arrays.asList(new Symbol("y"))), new Symbol("x"), creation),
-				new Tuple(Arrays.asList(LitBoolean.TRUE)));
+				new Function(creation, 
+						new Symbol("x"),
+						List.of(Pair.of(new Symbol("y"), new TypeVariable("a")))),
+				new Tuple(LitBoolean.TRUE));
 
 		this.assertInterpretationEquals(lexicalClojureTest, new LitInteger(128), evaluation);
 		p = lexicalClojureTest.infer(top);
@@ -787,11 +781,8 @@ class TestInterpretation extends VelkaTest{
 
 		// Test autoconvert representations
 		AbstractionApplication autoConRep = new AbstractionApplication(
-				new Lambda(new Tuple(Arrays.asList(new Symbol("x"))),
-						new TypeTuple(Arrays.asList(TypeAtom.TypeIntString)), new Symbol("x")),
-				// new Tuple(Arrays.asList(new
-				// Application(TypeConstructionLambda.IntRomanConstructor,
-				// new Tuple(Arrays.asList(new LitString("V")))))));
+				new Lambda( new Symbol("x"),
+						List.of(Pair.of(new Symbol("x"), TypeAtom.TypeIntString))),
 				new Tuple(Arrays.asList(new LitComposite(new LitString("V"), TypeAtom.TypeIntRoman))));
 		this.assertInterpretationEquals(autoConRep, new LitComposite(new LitString("5"), TypeAtom.TypeIntString),
 				top);
@@ -799,13 +790,13 @@ class TestInterpretation extends VelkaTest{
 		this.assertInference(p, TypeAtom.TypeIntString, autoConRep);
 
 		// Test elambda/efunction comparation
-		ExtendedLambda elambda = ExtendedLambda.makeExtendedLambda(List.of(
-				new Lambda(new Tuple(new Symbol("x")),
-						new TypeTuple(TypeAtom.TypeIntString), new Symbol("x")),
-				new Lambda(new Tuple(new Symbol("x")),
-						new TypeTuple(TypeAtom.TypeIntRoman), new Symbol("x"))));
+		var elambda = new Extend(
+				new Extend(
+						new ExtendedLambda(new TypeTuple(TypeAtom.TypeInt)),
+						new Lambda(new Symbol("x"), List.of(Pair.of(new Symbol("x"), TypeAtom.TypeIntString)))),
+				new Lambda(new Symbol("x"), List.of(Pair.of(new Symbol("x"), TypeAtom.TypeIntRoman)))); 
 		
-		AbstractionApplication useString = new AbstractionApplication(elambda, new Tuple(
+		var useString = new AbstractionApplication(elambda, new Tuple(
 				new LitComposite(new LitString("5"), TypeAtom.TypeIntString)));
 		
 		this.assertInterpretationEquals(useString,
@@ -813,19 +804,23 @@ class TestInterpretation extends VelkaTest{
 		
 		p = useString.infer(top);
 		this.assertInference(p,
-				RepresentationOr.makeRepresentationOr(TypeAtom.TypeIntString, TypeAtom.TypeIntRoman), useString);
+				RepresentationOr.factory(TypeAtom.TypeIntString, TypeAtom.TypeIntRoman), useString);
 
-		AbstractionApplication useRoman = new AbstractionApplication(elambda, new Tuple(
-				Arrays.asList(new LitComposite(new Tuple(Arrays.asList(new LitString("V"))), TypeAtom.TypeIntRoman))));
+		AbstractionApplication useRoman = new AbstractionApplication(elambda,
+				new Tuple(new LitComposite(new Tuple(Arrays.asList(new LitString("V"))), TypeAtom.TypeIntRoman)));
 		this.assertInterpretationEquals(useRoman,
 				new LitComposite(new Tuple(Arrays.asList(new LitString("V"))), TypeAtom.TypeIntRoman), top);
 		p = useRoman.infer(top);
 		this.assertInference(p,
-				RepresentationOr.makeRepresentationOr(TypeAtom.TypeIntString, TypeAtom.TypeIntRoman), useRoman);
+				RepresentationOr.factory(TypeAtom.TypeIntString, TypeAtom.TypeIntRoman), useRoman);
 
 		assertThrows(AppendableException.class,
 				() -> new AbstractionApplication(elambda, new Tuple(Arrays.asList(new LitString("fail")))).infer(top));
 
+		this.assertJExprEquals(Integer.valueOf(42), 
+				new AbstractionApplication(
+						new Lambda(new Symbol("a"), List.of(Pair.of(new Symbol("a"), TypeAtom.TypeIntNative))),
+						new Tuple(new LitInteger(42))));
 	}
 
 	@Test
@@ -903,191 +898,6 @@ class TestInterpretation extends VelkaTest{
 
 		Pair<Type, Substitution> p = orExpressionT.infer(top);
 		this.assertInference(p, TypeAtom.TypeBoolNative, orExpressionT);
-	}
-
-	@Test
-	@DisplayName("Test Operators")
-	void testOperators() throws AppendableException, IOException {
-		this.assertOperator(Operators.Addition,
-				new Tuple(Arrays.asList(new LitInteger(21), new LitInteger(21))), new LitInteger(42),
-				TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.BitAnd, new Tuple(Arrays.asList(new LitInteger(1), new LitInteger(2))),
-				new LitInteger(0), TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.BitOr, new Tuple(Arrays.asList(new LitInteger(1), new LitInteger(2))),
-				new LitInteger(3), TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.Car,
-				new Tuple(Arrays.asList(new Tuple(Arrays.asList(new LitInteger(42), new LitString("foo"))))),
-				new LitInteger(42), TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.Cdr,
-				new Tuple(Arrays.asList(new Tuple(Arrays.asList(new LitInteger(42), new LitString("foo"))))),
-				new LitString("foo"), TypeAtom.TypeStringNative);
-		this.assertOperator(Operators.Concantenation,
-				new Tuple(Arrays.asList(new LitString("foo"), new LitString("bar"))), new LitString("foobar"),
-				TypeAtom.TypeStringNative);
-		this.assertOperator(Operators.Division,
-				new Tuple(Arrays.asList(new LitInteger(84), new LitInteger(2))), new LitInteger(42),
-				TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.Equals,
-				new Tuple(Arrays.asList(Expression.EMPTY_EXPRESSION, LitBoolean.FALSE)), LitBoolean.FALSE,
-				TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.Equals,
-				new Tuple(Arrays.asList(Expression.EMPTY_EXPRESSION, Expression.EMPTY_EXPRESSION)), LitBoolean.TRUE,
-				TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.LesserThan,
-				new Tuple(Arrays.asList(new LitInteger(42), new LitInteger(43))), LitBoolean.TRUE,
-				TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.LesserThan,
-				new Tuple(Arrays.asList(new LitInteger(43), new LitInteger(42))), LitBoolean.FALSE,
-				TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.Multiplication,
-				new Tuple(Arrays.asList(new LitInteger(21), new LitInteger(2))), new LitInteger(42),
-				TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.Not, new Tuple(Arrays.asList(LitBoolean.TRUE)), LitBoolean.FALSE,
-				TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.Not, new Tuple(Arrays.asList(LitBoolean.FALSE)), LitBoolean.TRUE,
-				TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.NumericEqual,
-				new Tuple(Arrays.asList(new LitInteger(42), new LitInteger(42))), LitBoolean.TRUE,
-				TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.NumericEqual,
-				new Tuple(Arrays.asList(new LitInteger(42), new LitInteger(43))), LitBoolean.FALSE,
-				TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.Subtraction,
-				new Tuple(Arrays.asList(new LitInteger(84), new LitInteger(42))), new LitInteger(42),
-				TypeAtom.TypeIntNative);
-//		this.assertOperator(Operators.CanUnifyRepresentations,
-//				new Tuple(Arrays.asList(new TypeSymbol(TypeAtom.TypeIntNative),
-//						new TypeSymbol(new TypeVariable(NameGenerator.next())))),
-//				LitBoolean.TRUE, TypeAtom.TypeBoolNative);
-//		this.assertOperator(Operators.CanUnifyRepresentations,
-//				new Tuple(
-//						Arrays.asList(new TypeSymbol(TypeAtom.TypeIntNative), new TypeSymbol(TypeAtom.TypeIntNative))),
-//				LitBoolean.TRUE, TypeAtom.TypeBoolNative);
-//		this.assertOperator(Operators.CanUnifyRepresentations,
-//				new Tuple(Arrays.asList(new TypeSymbol(TypeAtom.TypeIntNative), new TypeSymbol(TypeAtom.TypeIntRoman))),
-//				LitBoolean.FALSE, TypeAtom.TypeBoolNative);
-//		this.assertOperator(Operators.CanUnifyRepresentations, new Tuple(
-//				Arrays.asList(new TypeSymbol(TypeAtom.TypeIntNative), new TypeSymbol(TypeAtom.TypeStringNative))),
-//				LitBoolean.FALSE, TypeAtom.TypeBoolNative);
-//		this.assertOperator(Operators.CanUnifyTypes,
-//				new Tuple(Arrays.asList(new TypeSymbol(TypeAtom.TypeIntNative),
-//						new TypeSymbol(new TypeVariable(NameGenerator.next())))),
-//				LitBoolean.TRUE, TypeAtom.TypeBoolNative);
-//		this.assertOperator(Operators.CanUnifyTypes,
-//				new Tuple(
-//						Arrays.asList(new TypeSymbol(TypeAtom.TypeIntNative), new TypeSymbol(TypeAtom.TypeIntNative))),
-//				LitBoolean.TRUE, TypeAtom.TypeBoolNative);
-//		this.assertOperator(Operators.CanUnifyTypes,
-//				new Tuple(Arrays.asList(new TypeSymbol(TypeAtom.TypeIntNative), new TypeSymbol(TypeAtom.TypeIntRoman))),
-//				LitBoolean.TRUE, TypeAtom.TypeBoolNative);
-//		this.assertOperator(Operators.CanUnifyTypes, new Tuple(
-//				Arrays.asList(new TypeSymbol(TypeAtom.TypeIntNative), new TypeSymbol(TypeAtom.TypeStringNative))),
-//				LitBoolean.FALSE, TypeAtom.TypeBoolNative);
-
-		this.assertOperator(Operators.IsSameType,
-				new Tuple(Arrays.asList(new LitInteger(42), new LitInteger(21))), LitBoolean.TRUE,
-				TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.IsSameType,
-				new Tuple(Arrays.asList(new LitInteger(42),
-						new LitComposite(new LitString("42"), TypeAtom.TypeIntString))),
-				LitBoolean.TRUE, TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.IsSameType,
-				new Tuple(Arrays.asList(new LitInteger(42), new LitString("42"))), LitBoolean.FALSE,
-				TypeAtom.TypeBoolNative);
-
-		this.assertOperator(Operators.IsSameRepresentation,
-				new Tuple(Arrays.asList(new LitInteger(42), new LitInteger(21))), LitBoolean.TRUE,
-				TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.IsSameRepresentation,
-				new Tuple(Arrays.asList(new LitInteger(42),
-						new LitComposite(new LitString("42"), TypeAtom.TypeIntString))),
-				LitBoolean.FALSE, TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.IsSameRepresentation,
-				new Tuple(Arrays.asList(new LitInteger(42), new LitString("42"))), LitBoolean.FALSE,
-				TypeAtom.TypeBoolNative);
-		
-		this.assertOperator(Operators.BitShiftRight, new Tuple(new LitInteger(2), new LitInteger(1)),
-				new LitInteger(1), TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.BitShiftLeft, new Tuple(new LitInteger(2), new LitInteger(1)),
-				new LitInteger(4), TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.UnsignedBitShiftRight, new Tuple(new LitInteger(2), new LitInteger(1)),
-				new LitInteger(1), TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.UnsignedBitShiftRight, new Tuple(new LitInteger(-1), new LitInteger(10)), 
-				new LitInteger(18014398509481983l), TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.BitNot, new Tuple(new LitInteger(6)), new LitInteger(-7), TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.BitXor, new Tuple(new LitInteger(5), new LitInteger(6)), new LitInteger(3), TypeAtom.TypeIntNative);
-		this.assertOperator(Operators.ToStr, new Tuple(new LitInteger(42)), new LitString("42"), TypeAtom.TypeStringNative);
-		
-		File tempOut = File.createTempFile("velka_read_test", null);
-        String content  = "hello world !!";       
-        Files.writeString(tempOut.toPath(), content);
-        
-        this.assertOperator(
-        		Operators.ReadFile, 
-        		new Tuple(new LitString(tempOut.toPath().toString())), 
-        		new LitString(content), 
-        		TypeAtom.TypeStringNative);
-        
-        tempOut.delete();
-        
-        Environment env = TopLevelEnvironment.instantiate();
-        
-        
-        this.assertOperator(Operators.StrSplit, 
-        		new Tuple(new LitString("foo bar baz"), 
-        		new LitString(" ")),
-        		ListNative.of(new LitString("foo"), new LitString("bar"), new LitString("baz")).interpret(env), 
-        		TypeAtom.TypeListNative);
-        
-        this.assertOperator(Operators.ParseInt, 
-        		new Tuple(new LitString("42")), new LitInteger(42), TypeAtom.TypeIntNative);
-        
-		this.assertOperator(Operators.IntToDouble, new Tuple(new LitInteger(42)), new LitDouble(42.0f),
-				TypeAtom.TypeDoubleNative);
-		
-		this.assertOperator(Operators.Floor, new Tuple(new LitDouble(3.14f)), new LitInteger(3),
-				TypeAtom.TypeIntNative);
-		
-		this.assertOperator(Operators.DoubleAddition, new Tuple(new LitDouble(3.14), new LitDouble(3.14)), new LitDouble(6.28), TypeAtom.TypeDoubleNative);
-		this.assertOperator(Operators.DoubleLesserThan, new Tuple(new LitDouble(3.14), new LitDouble(6.28)), LitBoolean.TRUE, TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.DoubleLesserThan, new Tuple(new LitDouble(3.14), new LitDouble(3.14)), LitBoolean.FALSE, TypeAtom.TypeBoolNative);
-		this.assertOperator(Operators.Modulo, new Tuple(new LitInteger(5), new LitInteger(3)), new LitInteger(2), TypeAtom.TypeIntNative);
-		
-		this.assertOperator(Operators.ConversionCost,
-				new Tuple(new Lambda(new Tuple(new Symbol("x")), new TypeTuple(TypeAtom.TypeIntNative), new LitString("foo")),
-						new Tuple(new LitComposite(new LitString("IV"), TypeAtom.TypeIntRoman))),
-				new LitDouble(CostAggregation.instance().defaultConversionRank()),
-				TypeAtom.TypeIntNative);
-//		this.assertOperator(Operators.ConversionCost,
-//				new Tuple(new Lambda(new Tuple(new Symbol("x")), new TypeTuple(TypeAtom.TypeIntNative), new LitString("foo")),
-//						new Tuple(new LitInteger(42))),
-//				new LitDouble(1d),
-//				TypeAtom.TypeIntNative);
-	}
-
-	@Test
-	@DisplayName("Test Conversions")
-	void testConversions() throws AppendableException {
-		this.assertConversion(ConversionOperators.IntRomanToIntString,
-				new LitComposite(new LitString("V"), TypeAtom.TypeIntRoman),
-				new LitComposite(new LitString("5"), TypeAtom.TypeIntString),
-				new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntRoman)), TypeAtom.TypeIntString));
-		this.assertConversion(ConversionOperators.IntRomanToIntNative,
-				new LitComposite(new LitString("V"), TypeAtom.TypeIntRoman), new LitInteger(5),
-				new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntRoman)), TypeAtom.TypeIntNative));
-		this.assertConversion(ConversionOperators.IntStringToIntRoman,
-				new LitComposite(new LitString("5"), TypeAtom.TypeIntString),
-				new LitComposite(new LitString("V"), TypeAtom.TypeIntRoman),
-				new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntString)), TypeAtom.TypeIntRoman));
-		this.assertConversion(ConversionOperators.IntStringToIntNative,
-				new LitComposite(new LitString("5"), TypeAtom.TypeIntString), new LitInteger(5),
-				new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntString)), TypeAtom.TypeIntNative));
-		this.assertConversion(ConversionOperators.IntNativeToIntString, new LitInteger(5),
-				new LitComposite(new LitString("5"), TypeAtom.TypeIntString),
-				new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)), TypeAtom.TypeIntString));
-		this.assertConversion(ConversionOperators.IntNativeToIntRoman, new LitInteger(5),
-				new LitComposite(new LitString("V"), TypeAtom.TypeIntRoman),
-				new TypeArrow(new TypeTuple(Arrays.asList(TypeAtom.TypeIntNative)), TypeAtom.TypeIntRoman));
 	}
 
 	@Test
@@ -1200,8 +1010,7 @@ class TestInterpretation extends VelkaTest{
 	void testDefinceConstructorExpression() throws AppendableException {
 		TypeName name = new TypeName("__defConstructorTest");
 		TypeAtom type = new TypeAtom(name, TypeRepresentation.NATIVE);
-		Lambda constructor = new Lambda(Tuple.EMPTY_TUPLE, TypeTuple.EMPTY_TUPLE,
-				new LitComposite(Expression.EMPTY_EXPRESSION, type));
+		var constructor = new Lambda(new LitComposite(Expression.EMPTY_EXPRESSION, type), List.of());
 
 		DefineConstructor defCon = new DefineConstructor(type, constructor);
 
@@ -1341,94 +1150,6 @@ class TestInterpretation extends VelkaTest{
 	}
 
 	@Test
-	@DisplayName("Test List Native")
-	void testListNative() throws AppendableException {
-		Environment env = TopLevelEnvironment.instantiate();
-		
-		
-		assertEquals(
-					new LitInteropObject(new LinkedList<Expression>(
-								Arrays.asList(new LitInteger(42), new LitInteger(21), new LitInteger(2))),
-						TypeAtom.TypeListNative),
-				ListNative.of(new LitInteger(42), new LitInteger(21), new LitInteger(2)).interpret(env));
-
-		this.assertInterpretedStringEquals("(construct List:Native)",
-				ListNative.EMPTY_LIST_NATIVE, env);
-		this.assertInterpretedStringEquals("(construct List:Native 42 (construct List:Native))",
-				ListNative.of(new LitInteger(42)).interpret(env), env);
-
-		this.assertInterpretedStringEquals("(is-list-native-empty (construct List:Native))", LitBoolean.TRUE, env);
-		this.assertInterpretedStringEquals(
-				"(is-list-native-empty (construct List:Native 42 (construct List:Native)))", LitBoolean.FALSE, env);
-
-		this.assertInterpretedStringEquals("(head-list-native (construct List:Native 42 (construct List:Native)))",
-				new LitInteger(42), env);
-		assertThrows(UserException.class,
-				() -> this.assertInterpretedStringEquals("(head-list-native (construct List:Native))",
-						Expression.EMPTY_EXPRESSION, env));
-
-		this.assertInterpretedStringEquals("(tail-list-native (construct List:Native 42 (construct List:Native)))",
-				ListNative.EMPTY_LIST_NATIVE, env);
-		assertThrows(UserException.class,
-				() -> this.assertInterpretedStringEquals("(tail-list-native (construct List:Native))",
-						Expression.EMPTY_EXPRESSION, env));
-
-		this.assertInterpretedStringEquals(
-				"(map-list-native (lambda (x) (+ x 1)) (construct List:Native 42 (construct List:Native)))",
-				ListNative.of(new LitInteger(43)).interpret(env), env);
-
-		this.assertInterpretedStringEquals(
-				"(map2-list-native + (construct List:Native 21 (construct List:Native 21 (construct List:Native))) (construct List:Native 21 (construct List:Native 21 (construct List:Native))))",
-				ListNative.of(new LitInteger(42), new LitInteger(42)).interpret(env),
-				env);
-
-		this.assertInterpretedStringEquals(
-				"(foldl-list-native + 0 (construct List:Native 1 (construct List:Native 2 (construct List:Native))))",
-				new LitInteger(3), env);
-		
-		this.assertInterpretedStringEquals(
-				"(" + ListNative.addToEndSymbol_out + " (construct List:Native 21 (construct List:Native)) 42)",
-				ListNative.of(new LitInteger(21), new LitInteger(42)).interpret(env), env);
-		
-		ArrayList<Expression> al = new ArrayList<Expression>();
-		al.add(new LitInteger(42));
-		al.add(new LitInteger(21));
-		this.assertInterpretedStringEquals(
-				"(convert List:Native List:JavaArray (construct List:Native 42 (construct List:Native 21 (construct List:Native))))",
-				new LitInteropObject(al, TypeAtom.TypeListJavaArray), env);
-		
-		LinkedList<Expression> ll = new LinkedList<Expression>();
-		ll.add(new LitInteger(42));
-		ll.add(new LitInteger(21));
-		this.assertInterpretedStringEquals(
-				"(convert List:Native List:JavaLinked (construct List:Native 42 (construct List:Native 21 (construct List:Native))))",
-				new LitInteropObject(ll, TypeAtom.TypeListJavaLinked), env);
-				
-		this.assertInterpretedStringEquals("(contains-list-native (construct List:Native 42 (construct List:Native 21 (construct List:Native))) 42)", LitBoolean.TRUE, env);
-		this.assertInterpretedStringEquals("(contains-list-native (construct List:Native 42 (construct List:Native 21 (construct List:Native))) 84)", LitBoolean.FALSE, env);
-		
-		this.assertInterpretedStringEquals("(filter-list-native (construct List:Native #t (construct List:Native #f (construct List:Native))) (lambda (x) x))",
-				ListNative.of(LitBoolean.TRUE).interpret(env), env);
-		this.assertInterpretedStringEquals("(get-list-native (construct List:Native 42 (construct List:Native)) 0)", new LitInteger(42), env);
-		this.assertInterpretedStringEquals("(build-list-native 2 (lambda (x) x))", ListNative.of(new LitInteger(0), new LitInteger(1)).interpret(env), env);
-		
-		this.assertInterpretedStringEquals("(remove-list-native (build-list-native 2 (lambda (x) x)) 1)", ListNative.of(new LitInteger(0)).interpret(env), env);
-		this.assertInterpretedStringEquals("(size-list-native (build-list-native 42 (lambda (x) x)))", new LitInteger(42), env);
-		this.assertInterpretedStringEquals("(append-list-native (build-list-native 1 (lambda (x) 21)) (build-list-native 1 (lambda (x) 42)))", 
-				ListNative.of(new LitInteger(21), new LitInteger(42)).interpret(env), env);
-		
-		this.assertInterpretedStringEquals("(reverse-list-native (build-list-native 3 (lambda (x) x)))",
-				ListNative.of(new LitInteger(2), new LitInteger(1), new LitInteger(0))
-						.interpret(env),
-				env);
-		
-		this.assertInterpretedStringEquals("(everyp-list-native (construct List:Native #t (construct List:Native #t (construct List:Native))) (lambda (x) x))",
-				LitBoolean.TRUE, env);
-		this.assertInterpretedStringEquals("(everyp-list-native (construct List:Native #t (construct List:Native #f (construct List:Native))) (lambda (x) x))",
-				LitBoolean.FALSE, env);
-	}
-
-	@Test
 	@DisplayName("Test instance-of")
 	void testInstanceOf() throws AppendableException {
 		InstanceOf iof = new InstanceOf(new LitInteger(42), TypeAtom.TypeIntNative);
@@ -1501,301 +1222,12 @@ class TestInterpretation extends VelkaTest{
 	@Test
 	@DisplayName("Test custom cost function")
 	void testCustomCostFunction() throws AppendableException {
-		Symbol arg = new Symbol("a");
-		Tuple elambda_args = new Tuple(arg);
-		
-		Lambda impl1 = new Lambda(
-				elambda_args, 
-				new TypeTuple(TypeAtom.TypeIntNative),
-				new LitString("Int Native"));
-		Lambda impl2 = new Lambda(
-				elambda_args, 
-				new TypeTuple(TypeAtom.TypeIntString),
-				new LitString("Int String"));
-		Lambda impl3 = new Lambda(
-				elambda_args, 
-				new TypeTuple(TypeAtom.TypeIntRoman),
-				new LitString("Int Roman"));
-		
-		Environment env = TopLevelEnvironment.instantiate();
-		
-		Tuple args = new Tuple(new LitInteger(42));
-
-		ExtendedLambda elambda_defaultCostFunction = 
-				ExtendedLambda.makeExtendedLambda(Arrays.asList(
-						impl1, 
-						impl2, 
-						impl3));
-		AbstractionApplication app_defCostFunction = 
-				new AbstractionApplication(
-						elambda_defaultCostFunction, 
-						args);
 		this.assertInterpretationEquals(
-				app_defCostFunction, 
-				new LitString("Int Native"), 
-				env);
-		
-		Lambda costFunction = new Lambda(
-				elambda_args,
-				new TypeTuple(TypeAtom.TypeInt),
-				new LitDouble(1));
-
-		Map<Lambda, Expression> m = new TreeMap<Lambda, Expression>();
-		m.put(impl1, Lambda.constFun(elambda_args.size(), new LitDouble(CostAggregation.instance().defaultImplementationRank())));
-		m.put(impl2, costFunction);
-		m.put(impl3, Lambda.constFun(elambda_args.size(), new LitDouble(CostAggregation.instance().defaultImplementationRank())));
-		
-		ExtendedLambda elambda_customCostFunction = 
-				ExtendedLambda.makeExtendedLambda(m);
-
-		AbstractionApplication app_customCostFunction = 
-				new AbstractionApplication(
-						elambda_customCostFunction, 
-						args);
-		this.assertInterpretationEquals(
-				app_customCostFunction, 
-				new LitString("Int String"), 
-				env);
-	}
-	
-	@Test
-	@DisplayName("Test Java Bit Set")
-	void testJavaBitSet() throws AppendableException {
-		BitSet bs = new BitSet();
-		var bitSet = 
-				new LitInteropObject(bs,
-				TypeAtom.TypeSetBitSet);
-		
-		assertInterpretationEquals(
-				"(construct Set:BitSet)",
-				bitSet);
-		
-		BitSet nbitsBs = new BitSet(2048);
-		var nBitsBitSet = 
-				new LitInteropObject(nbitsBs,
-				TypeAtom.TypeSetBitSet);
-		
-		assertInterpretationEquals(
-				"(construct Set:BitSet 2048)",
-				nBitsBitSet);
-		
-		bs.set(3);
-		assertInterpretationEquals(
-					"(define s (construct Set:BitSet))\n"
-				+ 	"(" + JavaBitSet.setSymbol_out.toString() + " s 3)",
-				bitSet);
-		assertInterpretationEquals(
-					"(define s (construct Set:BitSet))\n"
-				+	"(" + JavaBitSet.setValueSymbol_out.toString() + " s 3 #t)",
-				bitSet);
-		bs.set(2, 5);
-		assertInterpretationEquals(
-					"(define s (construct Set:BitSet))\n"
-				+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s 2 5)",
-				bitSet);
-		assertInterpretationEquals(
-					"(define s (construct Set:BitSet))\n"
-				+	"(" + JavaBitSet.setIntervalValueSymbol_out.toString() + " s 2 5 #t)",
-				bitSet);
-		
-		nbitsBs.set(4, 7);
-		nbitsBs.and(bs);
-		assertInterpretationEquals(
-				"(define s1 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s1 4 7)\n"
-			+	"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 2 5)\n"
-			+	"(" + JavaBitSet.andSymbol_out.toString() + " s1 s2)",
-			nBitsBitSet);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		nbitsBs.andNot(bs);
-		assertInterpretationEquals(
-				"(define s1 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s1 4 7)\n"
-			+	"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 2 5)\n"
-			+	"(" + JavaBitSet.andNotSymbol_out.toString() + " s1 s2)",
-			nBitsBitSet);
-		
-		assertInterpretationEquals(
-					"(define s2 (construct Set:BitSet))\n"
-				+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 2 5)\n"
-				+	"(" + JavaBitSet.cardinalitySymbol_out.toString() + " s2)",
-				new LitInteger(bs.cardinality()));
-		
-		nbitsBs.clear();
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 2 5)\n"
-			+	"(" + JavaBitSet.clearSymbol_out.toString() + " s2)",
-			nBitsBitSet);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		nbitsBs.clear(5);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.clearBitIndexSymbol_out.toString() + " s2 5)",
-			nBitsBitSet);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		nbitsBs.clear(5, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.clearIntervalSymbol_out.toString() + " s2 5 7)",
-			nBitsBitSet);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.cloneSymbol_out.toString() + " s2)",
-			nBitsBitSet);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s1 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s1 4 7)\n"
-			+	"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 2 5)\n"
-			+	"(" + JavaBitSet.equalsSymbol_out.toString() + " s1 s2)",
-			LitBoolean.FALSE);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		nbitsBs.flip(2);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.flipSymbol_out.toString() + " s2 2)",
-			nBitsBitSet);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		nbitsBs.flip(2, 5);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.flipIntervalSymbol_out.toString() + " s2 2 5)",
-			nBitsBitSet);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.getSymbol_out.toString() + " s2 5)",
-			nbitsBs.get(5) ? LitBoolean.TRUE : LitBoolean.FALSE);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.getIntervalSymbol_out.toString() + " s2 5 7)",
-			new LitInteropObject(nbitsBs.get(5, 7), TypeAtom.TypeSetBitSet));
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s1 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s1 4 7)\n"
-			+	"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 2 5)\n"
-			+	"(" + JavaBitSet.intersectsSymbol_out.toString() + " s1 s2)",
-			nbitsBs.intersects(bs) ? LitBoolean.TRUE : LitBoolean.FALSE);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.isEmptySymbol_out.toString() + " s2)",
-			nbitsBs.isEmpty() ? LitBoolean.TRUE : LitBoolean.FALSE);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.lengthSymbol_out.toString() + " s2)",
-			new LitInteger(nbitsBs.length()));
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.nextClearBitSymbol_out.toString() + " s2 5)",
-			new LitInteger(nbitsBs.nextClearBit(5)));
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.nextSetBitSymbol_out.toString() + " s2 0)",
-			new LitInteger(nbitsBs.nextSetBit(0)));
-		
-		nbitsBs.set(4, 7);
-		nbitsBs.or(bs);
-		assertInterpretationEquals(
-				"(define s1 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s1 4 7)\n"
-			+	"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 2 5)\n"
-			+	"(" + JavaBitSet.orSymbol_out.toString() + " s1 s2)",
-			nBitsBitSet);
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.previousClearBitSymbol_out.toString() + " s2 5)",
-			new LitInteger(nbitsBs.previousClearBit(5)));
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.previousSetBitSymbol_out.toString() + " s2 9)",
-			new LitInteger(nbitsBs.previousSetBit(9)));
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s1 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s1 2 5)\n"
-			+	"(" + JavaBitSet.sizeSymbol_out.toString() + " s1)",
-			new LitInteger(bs.size()));
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		assertInterpretationEquals(
-				"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 4 7)\n"
-			+	"(" + JavaBitSet.strSymbol_out.toString() + " s2)",
-			new LitString(nbitsBs.toString()));
-		
-		nbitsBs.clear();
-		nbitsBs.set(4, 7);
-		nbitsBs.xor(bs);
-		assertInterpretationEquals(
-				"(define s1 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s1 4 7)\n"
-			+	"(define s2 (construct Set:BitSet))\n"
-			+	"(" + JavaBitSet.setIntervalSymbol_out.toString() + " s2 2 5)\n"
-			+	"(" + JavaBitSet.xorSymbol_out.toString() + " s1 s2)",
-			nBitsBitSet);
+				"(let ((f (extend (extend (extended-lambda (Int))"
+				+ "(lambda ((Int:Native x)) \"foo\") (lambda ((Int:* x)) 0.1))"
+				+ "(lambda ((Int:Roman x)) \"bar\") (lambda ((Int:* x)) 0.9999999))))"
+				+ "(f 42))",
+				new LitString("bar"));
 	}
 	
 	@Test
@@ -1813,6 +1245,15 @@ class TestInterpretation extends VelkaTest{
 		logger.info("test");
 		
 		this.assertInterpretationEquals("(log \"test-2\")", Expression.EMPTY_EXPRESSION);
+		
+		LogManager.getLogManager().reset();
+		this.assertJExprEquals(TypedObject.VELKA_EMPTY, 
+				(new AbstractionApplication(Operators.InitLogger, new Tuple(new LitString("test-log2")))));
+		logger = Logger.getLogger(Logger.GLOBAL_LOGGER_NAME);
+		logger.info("test");
+		
+		this.assertJExprEquals(TypedObject.VELKA_EMPTY, 
+				(new AbstractionApplication(Operators.Log, new Tuple(new LitString("test-java")))));
 	}
 	
 	@Test
@@ -1884,11 +1325,11 @@ class TestInterpretation extends VelkaTest{
 		
 		//Testing side effects
 		this.assertInterpretationEquals(
-				"(loop ((x 1) (a (construct List:JavaArray))) (if (= x 2) a (let ((z (java-array-list-add-to-end a x))) (recur (+ x 1) a))))",
+				"(loop ((x 1) (a (construct List:Native))) (if (= x 2) a (let ((z (list-native-add-to-end-in-place a x))) (recur (+ x 1) a))))",
 				
 						new LitInteropObject(
-								new ArrayList<Expression>(Arrays.asList(new LitInteger(1))),
-						TypeAtom.TypeListJavaArray));
+								new ArrayList<Object>(List.of(1)),
+						TypeAtom.TypeListNative));
 		
 		//Testing nested loops
 		this.assertInterpretationEquals(
@@ -1946,125 +1387,21 @@ class TestInterpretation extends VelkaTest{
 	@Test
 	@DisplayName("test extend")
 	void extendTest() throws AppendableException {
-		Tuple elambda_args = new Tuple(new Symbol("x"));
+		var ef = new ExtendedFunction(env);
 		
-		ExtendedLambda elambda = ExtendedLambda.makeExtendedLambda(
-				Arrays.asList(
-						new Lambda(
-								elambda_args,
-								new TypeTuple(TypeAtom.TypeIntNative),
-								new LitString("foo"))));
+		this.assertInterpretationEquals(
+				"(extended-lambda (Int))",
+				ef);
 		
-		Lambda implementation = new Lambda(
-										elambda_args,
-										new TypeTuple(TypeAtom.TypeIntString),
-										new LitString("bar"));
-		
-		Extend extend = new Extend(elambda, implementation);
-		
-		assertReflexivity(extend);
-		assertDifference(extend, 
-				new Extend(Expression.EMPTY_EXPRESSION, implementation));
-		assertDifference(extend,
-				new Extend(elambda, Expression.EMPTY_EXPRESSION));
-		
-		Environment env = TopLevelEnvironment.instantiate();
-		
-		
-		Pair<Type, Substitution> p = extend.infer(env);
-		assertInference(p, 
-				RepresentationOr.makeRepresentationOr(
-						new TypeArrow(new TypeTuple(TypeAtom.TypeIntNative), TypeAtom.TypeStringNative),
-						new TypeArrow(new TypeTuple(TypeAtom.TypeIntString), TypeAtom.TypeStringNative)), 
-				extend);
-		
-		Map<Function, Expression> m = new TreeMap<Function, Expression>();
-		
-		Lambda impl = new Lambda(
-				elambda_args,
-				new TypeTuple(TypeAtom.TypeIntNative),
-				new LitString("foo"));
-		m.put((Function) impl.interpret(env),
-			  new Function(new TypeTuple(TypeAtom.TypeInt),
-					  elambda_args,
-					  new AbstractionApplication(
-							  Operators.ConversionCost,
-							  new Tuple(impl, elambda_args)),
-					  env));
-		
-		impl = new Lambda(
-				elambda_args,
-				new TypeTuple(TypeAtom.TypeIntString),
-				new LitString("bar"));
-		m.put((Function) impl.interpret(env),
-			  new Function(new TypeTuple(TypeAtom.TypeInt),
-					  elambda_args,
-					  new AbstractionApplication(
-							  Operators.ConversionCost,
-							  new Tuple(impl, elambda_args)),
-					  env));
-		
-//		assertInterpretationEquals(
-//				extend, 
-//				ExtendedFunction.makeExtendedFunction(
-//						m,
-//						env), 
-//				env, 
-//				typeEnv);
-		
-		
-		Lambda costLambda = new Lambda(
-				elambda_args,
-				new TypeTuple(TypeAtom.TypeInt),
-				new LitDouble(0));
-		Extend extendWithCost = new Extend(elambda, implementation, costLambda);
-		
-		assertReflexivity(extendWithCost);
-		assertDifference(extend, extendWithCost);
-		
-		p = extendWithCost.infer(env);
-		assertInference(p, 
-				RepresentationOr.makeRepresentationOr(
-						new TypeArrow(new TypeTuple(TypeAtom.TypeIntNative), TypeAtom.TypeStringNative),
-						new TypeArrow(new TypeTuple(TypeAtom.TypeIntString), TypeAtom.TypeStringNative)), 
-				extendWithCost);
-		
-		
-		Map<Function, Expression> expectedImpls = new TreeMap<Function, Expression>();
-		impl = new Lambda(
-				elambda_args,
-				new TypeTuple(TypeAtom.TypeIntNative),
-				new LitString("foo"));
-		expectedImpls.put(
-				(Function) impl.interpret(env),
-				new Function(new TypeTuple(TypeAtom.TypeInt),
-						elambda_args,
-						new AbstractionApplication(Operators.ConversionCost,
-								  new Tuple(impl, elambda_args)),
-						env));
-		
-		impl = new Lambda(
-				elambda_args,
-				new TypeTuple(TypeAtom.TypeIntString),
-				new LitString("bar"));
-		expectedImpls.put(
-				(Function) impl.interpret(env),
-				new Function(new TypeTuple(TypeAtom.TypeInt),
-						elambda_args,
-						new LitDouble(0),
-						env));
-		
-//		assertInterpretationEquals(
-//				extendWithCost,
-//				ExtendedFunction.makeExtendedFunction(expectedImpls, env),
-//				env,
-//				typeEnv);
-		
-		//Test if cross-used type variables inferes correctly (substitution merge)
-		Expression f = parseString(
-				"(let-type (A) (extend (extend (extended-lambda (A)) (lambda ((A x)) (floor x))) (lambda ((A x)) (+ x 1))))")
-				.get(0);
-		assertThrows(TypeSetDoesNotUnifyException.class, () -> f.infer(env));
+		assertAll(() -> {
+			ef.extend(
+					new Function(env, new LitInteger(1), List.of(Pair.of(new Symbol("x"), TypeAtom.TypeIntNative))),
+					new Function(this.env, new LitDouble(RankAggregation.instance().defaultImplementationRank()),
+							List.of(Pair.of(new Symbol("x"), TypeAtom.TypeInt))));
+			
+			this.parseString("(extend (extended-lambda (Int)) (lambda ((Int:Native x)) 1))").get(0)
+					.interpret(this.env);
+		});
 	}
 	
 	@Test
@@ -2074,7 +1411,6 @@ class TestInterpretation extends VelkaTest{
 		Map<Path, String> doc = generator.generate(Arrays.asList(
 				Operators.class,
 				ConversionOperators.class,
-				JavaArrayList.class,
 				JavaLinkedList.class,
 				ListNative.class,
 				ConstructorOperators.class));
